kubernetes/mediaplayback/trawl/trawl-network.yaml
---
# Service to be used by Traefik to access trawl (FlareSolverr replacement)
apiVersion: v1
kind: Service
metadata:
  name: trawl
  namespace: mediaplayback
  labels:
    app.kubernetes.io/name: trawl
    app.kubernetes.io/instance: trawl
spec:
  ports:
    - name: http
      port: 8191
      protocol: TCP
      targetPort: 8191
  selector:
    app.kubernetes.io/name: trawl
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trawl
  namespace: mediaplayback
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`trawl.local.timo.be`)
      kind: Rule
      services:
        - name: trawl
          port: 8191
